Feat: Add update routes to user name and email
