# routes/userRoutes.ts
@@ -6,6 +6,7 @@ const router = Router();
 router.post('/', userController.createUser);
 router.get('/', userController.getUsers);
 router.get('/:id', userController.getUser);
+router.patch('/:id', userController.updateUser);
 router.delete('/:id', userController.deleteUser);
 
 export default router;
